# nats-cli

./: Cargo.toml  README.md  cli.yaml
src/: main.rs
