[package]
name = "nats-cli"
version = "0.1.0"
authors = ["clementcherrey <clement.cherrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.8.1"
structopt = "0.3.13"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
